# context7-agent-v2

./: .env.example  .gitignore  .gitignore.bak  Architecture Design Document.md  Best Practices Cheat Sheet.md  PYDANTIC_AI_TROUBLESHOOTING.md  PYDANTIC_AI_TROUBLESHOOTING_review.md  PYDANTIC_AI_TROUBLESHOOTING_updated.md  README (orig).md  README.md  Troubleshooting_Pydantic-AI_and_MCP-Server_Issues.md  code review and comparison between two designs.md  code_review.md  code_review_cli.md  code_review_final_working_codebase.md  code_review_vs_guide.md  codebase_file_set_pydantic-ai_agent_with_Context7_MCP_based_authoritaive_document_retrieval_system.md  doc_n8n_json.md  doc_n8n_json_2.md  doc_n8n_json_3.md  errors.txt  mlist  orig_application_code_files_set.md  output_n8n_json_format.md  output_on_pydantic-ai_agent.md  package-lock.json  pip-list.txt  pyproject.toml  pyproject.toml.bak  pyproject.toml.kimi  requirements.txt  requirements.txt.bak  test_mcp.py  verify_mcp.py  verify_mcp.py.bak  verify_mcp.py.gpt  working_sample_codebase_for_reference_only.md
docker/: .env.docker  Dockerfile  docker-compose.yml
docs/: AI_response.md  gemini-50.md  gemini-51.md  gemini-52.md  gpt-10.md  kimi-1.md  kimi-19.md  kimi-2.md  kimi-20.md  kimi-21.md  kimi-22.md  kimi-23.md  kimi-24.md  kimi-25.md  kimi-26.md  kimi-27.md  kimi-28.md  kimi-29.md  kimi-3.md  kimi-30.md  kimi-31.md  kimi-33.md  kimi-34.md  kimi-35.md  kimi-36.md  kimi-37.md  kimi-38.md  kimi-39.md  kimi-41.md  kimi-42.md  kimi-43.md  kimi-44.md  kimi-45.md  kimi-5.md  prompt_2.md  prompt_to_fix_4.md
src/: agent.py  agent.py.kimi  agent.py.kimi-3  agent.py.kimi-4  agent.py.kimi-5  agent.py.kimi-6  agent.py.orig  cli.py  cli.py.kimi  cli.py.kimi-2  cli.py.kimi-3  cli.py.kimi-4  cli.py.orig  config.py  config.py.kimi-2  config.py.orig  history.py  history.py.orig  themes.py  utils.py
tests/: test_agent.py  test_agent.py.orig  test_config.py  test_history.py  test_history.py.orig
